[gd_scene load_steps=3 format=3 uid="uid://dawjv82ssqpsi"]

[ext_resource type="Script" path="res://Scripts/scene_change_trigger.gd" id="1_mnfsa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5kb8"]
size = Vector2(60, 55)

[node name="SceneChangeTrigger" type="Area2D"]
script = ExtResource("1_mnfsa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y5kb8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
